src/network_policies/requestintent1 Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: requestintent1
  namespace: fluidos
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: order_placement
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: default
      podSelector:
        matchLabels:
          app: product_catalogue
